<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:key="mainScreen">

    <PreferenceCategory android:key="General"
        android:title="@string/stg_cat_general">

        <Preference
            android:summary="@string/stg_map_source_hint_desc"
            />

        <Preference android:key="MapSource0"
            android:title="@string/stg_map_source0_title"
            />

        <Preference android:key="MapSource1"
            android:title="@string/stg_map_source1_title"
            />

        <CheckBoxPreference android:key="ShowOverlayButton"
            android:title="@string/stg_show_overlay_btn_title"
            app:defaultValue="false"
            />
        <Preference android:key="OverlaySource"
            android:title="@string/stg_overlay_source_title"
            />

        <ListPreference android:key="UnitsOfMeasure"
            android:title="@string/stg_units"
            android:defaultValue="metric"
            android:entries="@array/unitsOfMeasure"
            android:entryValues="@array/unitsOfMeasureAlias"
            />

    </PreferenceCategory>

    <PreferenceCategory android:key="Experimental"
        android:title="@string/stg_cat_experimental">

        <CheckBoxPreference android:key="ExperimentalStickCenterOnZoom"
            android:title="@string/stg_experimental_stick_center_on_zoom_title"
            android:defaultValue="false"
            android:summary="@string/stg_experimental_stick_center_on_zoom_summary"
            />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/stg_cat_about" >
        <Preference
            android:key="MarketLink"
            android:title="@string/stg_marketlink"
            />

        <Preference
            android:key="About"
            android:title="@string/stg_versions"
            />

    </PreferenceCategory>

</PreferenceScreen>